hphp/test/slow/parser/object_creation_in_enum.php.expectf

Fatal error: Invalid expression in constant initializer in %s/object_creation_in_enum.php on line 4
